# CursesTetris

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
